--- a/css/airspace.css
+++ b/css/airspace.css
@@ -65,7 +65,7 @@ a:active {
 	Header Start
 --*/
 header {
-  background: #fff;
+  background: #000;
   padding: 20px 0;
 }
 header .navbar {
@@ -73,7 +73,7 @@ header .navbar {
   border: 0px;
 }
 header .navbar-brand {
-  padding-top: 5px;
+  padding-top: 0px;
 }
 header .navbar-default {
   background: none;
@@ -83,7 +83,7 @@ header .navbar-default .navbar-nav {
   padding-top: 10px;
 }
 header .navbar-default .navbar-nav li a {
-  color: #333333;
+  color: #fff;
   padding: 10px 26px;
   font-size: 15px;
 }
