--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,8 +12,17 @@
             <!--<li><a href="#">Terms</a></li>-->
           </ul>
         </div>
-        <p>Copyright &copy; Design &amp; Developed by <a href="http://www.holisticda.com">Holistic Development Agency</a>. All rights reserved.</p>
+        <p>Copyright &copy; by <a href="http://www.holisticda.com">Holistic Development Agency</a> 2018. All rights reserved.</p>
       </div>
+      <ul class="social-icons">
+
+        <li>
+          <a href="http://www.themefisher.com"><i class="fa fa-linkedin"></i></a>
+        </li>
+       <li>
+          <a href="http://www.themefisher.com"><i class="fa fa-facebook"></i></a>
+        </li>
+      </ul>
     </div>
   </div>
 </footer>
