--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,10 +17,10 @@
       <ul class="social-icons">
 
         <li>
-          <a href="http://www.themefisher.com"><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/company/holisticdevelopmentagency" target="_blank"><i class="fa fa-linkedin"></i></a>
         </li>
        <li>
-          <a href="http://www.themefisher.com"><i class="fa fa-facebook"></i></a>
+         <a href="https://www.facebook.com/HolisticDevelopmentAgency" target="_blank"><i class="fa fa-facebook"></i></a>
         </li>
       </ul>
     </div>
