--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,16 @@
 <!-- Header Start -->
 <header>
-<div class="container">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131474955-1"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-131474955-1');
+</script>
+
+  <div class="container">
   <div class="row">
     <div class="col-md-12">
       <!-- header Nav Start -->
